--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,25 @@
+@font-face{
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat-VariableFont_wght.ttf); 
+    font-style: normal;
+    font-display: swap;
+}
+
 :root{
+    --primary-color: #8F0101;
+    --secondary-color: #B81515;
+    
     --background-primary-color: #ffffff;
     --background-secondary-color: #F5F5F5;
     --background-tertiary-color: #000000;
 
-    --button-primary-color: #8F0101;
-    --button-secondary-color: #B81515;
-
     --text-primary-color: #222222;
     --text-secondary-color: #ffffff;
 
+    --titles-weight: 700;
+    --text-weight: 400;
+    --menu-text-weight: 500;
+}
 
 /* CSS RESET */
 body, img, h1, p, fieldset, legend, label, input, select, textarea, button {
